--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "modern-normalize": "^1.0.0",
     "normalizr": "^3.6.1",
     "prop-types": "^15.7.2",
+    "node-sass": "^4.14.1",
+    "gh-pages": "^3.1.0",
+    "pnotify": "^5.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
+    "react-hook-form": "^6.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
+    "redux-logger": "^3.0.6",
     "slugify": "^1.4.6",
     "redux-persist": "^6.0.0",
     "shortid": "^2.2.15",
@@ -27,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
