--- a/package.json
+++ b/package.json
@@ -8,24 +8,26 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.1",
-    "modern-normalize": "^1.0.0",
-    "normalizr": "^3.6.1",
-    "prop-types": "^15.7.2",
-    "node-sass": "^4.14.1",
     "gh-pages": "^3.1.0",
+    "modern-normalize": "^1.0.0",
+    "node-sass": "^4.14.1",
+    "normalizr": "^3.6.1",
     "pnotify": "^5.2.0",
+    "prop-types": "^15.7.2",
+    "radium": "^0.26.1",
     "react": "^17.0.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.0",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
-    "react-hook-form": "^6.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
     "redux-logger": "^3.0.6",
-    "slugify": "^1.4.6",
     "redux-persist": "^6.0.0",
     "shortid": "^2.2.15",
+    "slugify": "^1.4.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
